# cs3219-project-ay2223s1-g4

./: .gitignore  README.md  docker-compose.yml  run-backend.sh  run-docker.sh  run-dos2unix.sh  run-frontend.sh  run-tests.sh  run.sh
.github/workflows/: ci-tests.yaml
backend/collab-service/: .env.example  .gitignore  Dockerfile.dev  package-lock.json  package.json
backend/collaboration-service/: package-lock.json  package.json
backend/matching-service/: .env.example  package-lock.json  package.json
backend/pubsub-service/: Dockerfile.dev  package-lock.json  package.json  run.sh
backend/question-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  run.sh
backend/room-service/: .env.example  package-lock.json  package.json
backend/user-service/: .env.example  index.js  package-lock.json  package.json  run.sh
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  configs.js  index.js
matching-service/: .env.example  index.js  package-lock.json  package.json
matching-service/controller/: matching-controller.js  matching-routes.js
questionscraper/: Dockerfile  README.md  connector.py  main.py  pyproject.toml  soupScrape.py
questionscraper/app/: main.py  soupScrape.py
questionscraper/app/question/: connector.py  question_crud.py  question_model.py
questionscraper/pydantic_model/: Question.py
questionscraper/question/: question_model.py
user-service/: .env.example
(+264 files in other folders)
